fixing fonts on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -22,14 +22,14 @@
 	display: none !important;
 }
 
-.theLyrics .fp-tableCell{
+.theLyrics .fp-tableCell, .theLyrics{
 	width:100% !important;
 	text-align:center;
 	display:block !important;
 	position:relative;
 }
 
-.theLyrics .fp-tableCell .overlay{
+.theLyrics .fp-tableCell .overlay, .theLyrics .overlay{
 	background:rgba(0,0,0,1);
 	width:100%;
 	height:100%;
@@ -42,6 +42,10 @@
 	z-index:9999;
 }
 
+.theLyrics .singAlong{
+
+}
+
 #countDown{
 	position: absolute;
     z-index: 99999;
@@ -52,14 +56,14 @@
     opacity:0.5;
 }
 
-.theLyrics .fp-tableCell h1{
+.theLyrics .fp-tableCell h1, .theLyrics h1{
 	text-align:center;
 	width:100%;
 	font-size:55px;
 	color:#fff;
 }
 
-.theLyrics .fp-tableCell h3{
+.theLyrics .fp-tableCell h3, .theLyrics h3{
 	text-align:center;
 	opacity:0.5;
 	font-size:32px;
